@@ -9,11 +9,12 @@
 "ON","On","Status indicator text."
 "OFF","Off","Status indicator text."
 "OPTIONS_GENERAL","General","Options tab title."
+"OPTIONS_TREES","Trees","Options tab title."
 "KEYS","Keys","Options tab title."
-"OPTIONS_LIMIT","More trees","Options tab title."
 "UI_OPTIONS","User interface","Options panel header."
 "TRANSPARENT_UI","Use transparent button backgrounds","Checkbox in options panel."
-"RESET_POS","Reset button positions","Button in options panel."
+"RESET_POS","Reset button position","Button in options panel."
+"OPTIONS_LIMIT","More trees","Options panel header."
 "LOAD_OPTIONS","Loading actions","Options panel header."
 "NETWORK_OVERLAP","Trees under networks","Options panel menu title."
 "BUILDING_OVERLAP","Trees under buildings","Options panel menu title."
